# sphinx_parser

./: .coveragerc  .gitattributes  CLAUDE.md  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment.yml  lower_bound.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: preview-release.yml  push-pull.yml  release.yml
binder/: environment.yml
docs/: README.md  conf.py  environment.yml  index.rst
notebooks/: example.ipynb  notebook.ipynb  notebook_simple.ipynb
sphinx/: _version.py
sphinx_parser/: _version.py  ase.py  calculator.py  input.py  jobs.py  output.py  potential.py  toolkit.py
sphinx_parser/lib/: field.py
sphinx_parser/src/: generator.py  input_data.yml
stinx/: _version.py  ase.py  generator.py  input.py  input_data.yml  output.py  potentials.py  toolkit.py
stinx/source/: generator.py
stinx/src/: generator.py  input_data.yml
tests/hubbardU/: energy.mpg  eps.0.mpg  eps.1.mpg  hubbardOcc.mpg  input.sx  relaxHist.sx  relaxedStr.sx
tests/static/potentials/: Ag_POTCAR
tests/unit/: test_ase.py  test_field.py  test_generator.py  test_hubbardU.py  test_input.py  test_jobs.py  test_output.py  test_potential.py  test_stinx.py  test_tests.py
