[build-system]
requires = [
    "hatchling==1.29.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "sphinx_parser"
description = "sphinx_parser - Your pyiron-like module."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.9, <3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
   "numpy==2.4.3",
   "ase==3.28.0",
   "h5py==3.16.0",
   "semantikon==1.0.0",
   "pint==0.25.3",
   "pyyaml==6.0.3",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://sphinx_parser.readthedocs.io"
Repository = "https://github.com/pyiron/sphinx_parser"

[tool.hatch.build]
include = [
    "sphinx_parser"
]

[tool.hatch.build.hooks.vcs]
version-file = "sphinx_parser/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "sphinx_parser"
]

[tool.hatch.build.targets.wheel]
packages = [
    "sphinx_parser"
]

[tool.hatch.version]
source = "vcs"
path = "sphinx_parser/_version.py"

[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",
]
ignore_missing_imports = true
strict_equality = true
non_interactive = true
install_types = true
